--- a/workshop/exercise-3/index.html
+++ b/workshop/exercise-3/index.html
@@ -1,1 +1,15 @@
-<!-- ...crickets... -->
+<!DOCTYPE html>
+<html lang="en" dir="ltr">
+  <head>
+    <meta charset="utf-8">
+    <title></title>
+  </head>
+  <body>
+    <h1>Title</h1>
+    <h2>subtitle</h2>
+    <h3>sub subtitle</h3>
+    <h4>sub sub subtitle</h4>
+    <h5>sub sub sub subtitle</h5>
+    <h6>sub sub sub sub subtitle</h6>
+  </body>
+</html>
