--- a/workshop/exercise-4/index.html
+++ b/workshop/exercise-4/index.html
@@ -1,1 +1,15 @@
-<!-- ...crickets... -->
+<!DOCTYPE html>
+<html lang="en" dir="ltr">
+  <head>
+    <meta charset="utf-8">
+    <title></title>
+  </head>
+  <body>
+    <h1>Things I like</h1>
+    <ul>
+      <li>Javascript</li>
+      <li>Brownies</li>
+      <li>Dad jokes</li>
+    </ul>
+  </body>
+</html>
